Apply fix to imageblock that wasn't aligning center

--- a/assets/styles/scss/_gutenberg.scss
+++ b/assets/styles/scss/_gutenberg.scss
@@ -71,6 +71,17 @@ Frontend styles for gutenberg blocks
   @include button();
 }
 
+/** === Image Block === */
+.wp-block-image {
+	.aligncenter {
+		img {
+			display: block;
+    		margin-right: auto;
+    		margin-left: auto;
+		}
+	}
+}
+
 /** === Gallery === */
 
 .entry-content {
