--- a/assets/styles/scss/_main.scss
+++ b/assets/styles/scss/_main.scss
@@ -640,12 +640,6 @@ POSTS & CONTENT STYLES
 		display: inline;
 		float: right;
 	}
-	.aligncenter, img.aligncenter {
-		margin-right: auto;
-		margin-left: auto;
-		display: block;
-		clear: both;
-	}
 
 	video, object {
 		max-width: 100%;
